test/replaceIndexMulti7.slq
def main(){
	x:=(1,2,3):int[3]^3;
	(x[1],x[1]):=(x[1],x[1]);
	(x[2],x[1]):=(x[3],x[1]); // error
	return x;
}
